# agende

./: .gitignore  LICENSE  README.md  agendar.py  auto_agendar.sh  pyproject.toml  setup.cfg
src/agende/: agende.py
